--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <nav class="navbar navbar-light">
                         <div class="container-fluid">
                             <a class="navbar-brand navimg" href="#">
-                            <img src="Home Page/Untitled-1.png" alt="profile" width="350" height="80" class=" img-fluid">
+                            <img src="Untitled-1.png" alt="profile" width="350" height="80" class=" img-fluid">
                             </a>
                         </div>
                     </nav>
@@ -38,7 +38,7 @@
                 <div class="row justify-content-center align-items-center navimg">
                     <div class="container_2">
                         <div class="display-5">
-                             <img src="Home Page/school.jpg" alt="school" style="width:200%;" class="img-fluid">
+                             <img src="school.jpg" alt="school" style="width:200%;" class="img-fluid">
                             <div class="card-body text-center py-4">
                                 <h4 class="card-title fw-light"></h4>
                                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSeUFXVEZyk2_tPi6ZeAb14pJ53zY2tyRHe4FzUyLQh6yTMWcw/viewform?usp=sf_link" class="btn btn-outline-success btn-md centered">Answer Survey</a>
@@ -72,21 +72,21 @@
                     </div>
                     <div class="carousel-inner">
                       <div class="carousel-item active" data-bs-interval="10000">
-                        <img src="Bulletin Board/early.jpg" class="d-block w-100" alt="img">
+                        <img src="early.jpg" class="d-block w-100" alt="img">
                         <!-- <div class="carousel-caption d-none d-md-block">
                           <a href="#about" class="btn btn-outline-primary btn-md centered">Read More</a>
                           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                         </div> -->
                       </div>
                       <div class="carousel-item" data-bs-interval="2000">
-                        <img src="Annoucements/poster.jpg" class="d-block w-100" alt="img">
+                        <img src="poster.jpg" class="d-block w-100" alt="img">
                         <!-- <div class="carousel-caption d-none d-md-block">
                           <a href="#about" class="btn btn-outline-primary btn-md centered">Read More</a>
                           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                         </div> -->
                       </div>
                       <div class="carousel-item">
-                        <img src="Annoucements/drill.jpg" class="d-block w-100" alt="img">
+                        <img src="drill.jpg" class="d-block w-100" alt="img">
                         <!-- <div class="carousel-caption d-none d-md-block">
                           <a href="#about" class="btn btn-outline-primary btn-md centered">Read More</a>
                           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -220,7 +220,7 @@
                             <div class="card">
                                 <img 
                                 class="card-img-top"
-                                src="Home Page/bulletin.jpg"
+                                src="bulletin.jpg"
                                 alt="card image"
                                 />
                                 <div class="card-body text-center py-4">
@@ -236,7 +236,7 @@
                             <div class="card">
                                 <img 
                                 class="card-img-top"
-                                src="Home Page/school photos.jpg"
+                                src="school photos.jpg"
                                 alt="card image"
                                 />
                                 <div class="card-body text-center py-4">
@@ -252,7 +252,7 @@
                             <div class="card">
                                 <img 
                                 class="card-img-top"
-                                src="Home Page/schoolfacility.png"
+                                src="schoolfacility.png"
                                 alt="card image"
                                 />
                                 <div class="card-body text-center py-4">
