--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                   <!-- <THE TORCH>style="width: 100%;" -->
                   <section>
                       <div class="text-lg-start">
-                        <h2 class="fw-light"><img src="Home Page/Torch logo.png" alt="profile" width="90" height="80" class=" text-lg-start">The Torch</h2>
+                        <h2 class="fw-light"><img src="Torch logo.png" alt="profile" width="90" height="80" class=" text-lg-start">The Torch</h2>
                         <p class="lead text-muted">The Official School Digital Publication of Manolo Fortich National High School
                         </p>
                       </div> 
@@ -153,7 +153,7 @@
                    <!-- <ANG SINAG> -->
                   
                         <div class="text-lg-start">
-                          <h2 class="fw-light"><img src="Home Page/sinaglogo.png" alt="profile" width="90" height="80" class=" text-lg-start">Ang Sinag</h2>
+                          <h2 class="fw-light"><img src="sinaglogo.png" alt="profile" width="90" height="80" class=" text-lg-start">Ang Sinag</h2>
                           <p class="lead text-muted">Digital na Publikasyon ng Mataas na Paaralang Pambansa ng Manolo Fortich
                           </p>
                         </div>
