--- a/bulletinboard.html
+++ b/bulletinboard.html
@@ -58,7 +58,7 @@
                             <div class="card">
                                 <img 
                                 class="card-img-top"
-                                src="Bulletin Board/Grade 7.jpg"
+                                src="Grade 7.jpg"
                                 alt="card image"
                                 />
                                 <div class="card-body text-center py-4">
@@ -74,7 +74,7 @@
                             <div class="card">
                                 <img 
                                 class="card-img-top"
-                                src="Bulletin Board/Grade 8.jpg"
+                                src="Grade 8.jpg"
                                 alt="card image"
                                 />
                                 <div class="card-body text-center py-4">
@@ -90,7 +90,7 @@
                             <div class="card">
                                 <img 
                                 class="card-img-top"
-                                src="Bulletin Board/Grade 9.jpg"
+                                src="Grade 9.jpg"
                                 alt="card image"
                                 />
                                 <div class="card-body text-center py-4">
@@ -107,7 +107,7 @@
                                 <div class="card">
                                     <img 
                                     class="card-img-top"
-                                    src="Bulletin Board/Grade 10.jpg"
+                                    src="Grade 10.jpg"
                                     alt="card image"
                                     />
                                     <div class="card-body text-center py-4">
@@ -123,7 +123,7 @@
                                 <div class="card">
                                     <img 
                                     class="card-img-top"
-                                    src="Bulletin Board/Grade 11.jpg"
+                                    src="Grade 11.jpg"
                                     alt="card image"
                                     />
                                     <div class="card-body text-center py-4">
@@ -139,7 +139,7 @@
                                 <div class="card">
                                     <img 
                                     class="card-img-top"
-                                    src="Bulletin Board/Grade 12.jpg"
+                                    src="Grade 12.jpg"
                                     alt="card image"
                                     />
                                     <div class="card-body text-center py-4">
