--- a/bulletinboard.html
+++ b/bulletinboard.html
@@ -21,7 +21,7 @@
                         <nav class="navbar navbar-light">
                             <div class="container-fluid">
                                 <a class="navbar-brand navimg" href="#">
-                                <img src="Home Page/Untitled-1.png" alt="profile" width="350" height="80" class=" img-fluid">
+                                <img src="Untitled-1.png" alt="profile" width="350" height="80" class=" img-fluid">
                                 </a>
                             </div>
                         </nav>
@@ -37,7 +37,7 @@
                 <div class="display-5"> <p class="text-center">Bulletin Board </p> </div>
                 <div>
                     <img width="100%"
-                    src="Bulletin Board/early1.jpg">
+                    src="early1.jpg">
                 </div>
             </section>
 
