--- a/schoolfacility.html
+++ b/schoolfacility.html
@@ -36,7 +36,7 @@
               <div class="display-5"> <p class="text-center">Manolo Fortich National High School </p> </div>
               <div>
                 <img width="100%"
-                src="Annoucements/schoolimg.jpg">
+                src="schoolimg.jpg">
               </div>
             </section>
 
