--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
             <section id="news">
                 <div class="display-5">
-                    <p class="text-center">Annoucements</p>
+                    <p class="text-center">Announcements</p>
                 </div>
                 <div class="container">
                   <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
